# rusty_gaussian_processes

./: .gitignore  Cargo.toml
benchmarks/: benchmark_multithreaded.py  plot_skill_assessments.py  skill_assessments.py
examples/: pass_numpy_array.py  run_gp.py  run_hindcasts.py  rust_gaussian_process.py  testing_multple_gp_code.py
gaussian_processes/: gaussian_process.py  rust_gaussian_process.py
src/: gaussian_processes.rs  lib.rs
