[package]
name = "rusty_gaussian_processes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine="0.5.4"
tokio = {version="1.15.0", features=["full"]}
futures = "0.3.19"


[lib]
name = "rusty_gaussian_processes"
crate-type = ["dylib"]

[profile.release]
lto = true